# piko-protocol

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Anchor.toml  COLOSSEUM_STRATEGY.md  Cargo.toml  Dockerfile  NFT_TESTING.md  README.md  SUBMISSION_PACKAGE.md  brand.md  package-lock.json  package.json
apps/web/: next.config.mjs  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/demo-flow/: demo-page-inner.tsx  layout.tsx  page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/components/: DecisionReceipt.tsx  ai-approval-card.tsx  ai-decision-panel.tsx  ai-decision-summary-panel.tsx  ai-evaluation-screen.tsx  app-shell.tsx  demo-kiosk-home.tsx  demo-pay-panel.tsx  demo-quest-card.tsx  demo-reward.tsx  demo-stepper.tsx  demo-wallet-gate.tsx  leaderboard-widget.tsx  map-view.tsx  merchant-pin.tsx  quest-card.tsx  reward-toast.tsx  scan-pay-button.tsx  verification-gate.tsx  verify-with-world-id.tsx
apps/web/hooks/: use-demo-mode.ts  use-merchant-map.ts  use-pwa.ts
apps/web/lib/: api.ts  decision-receipt.ts  demo-data.ts  demo-mode.ts  map-config.ts  merchant-simulation.ts  types.ts  ui-messages.ts  utils.ts
apps/web/providers/: demo-context.tsx  wallet-provider.tsx
apps/web/public/: sw.js
programs/merchant-registry/: Cargo.toml
programs/merchant-registry/src/: lib.rs
programs/quest/: Cargo.toml
programs/quest/src/: lib.rs
scripts/: kill-ports.mjs  next-dev.mjs  run-anchor.cjs  seed-merchants.ts
(+8 files in other folders)
