[package]
name = "merchant-registry"
version = "0.1.0"
description = "DePokemonGo Merchant Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merchant_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "=0.30.0"
