[package]
name = "quest-program"
version = "0.1.0"
description = "DePokemonGo Quest Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quest_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "=0.30.0"
